feat: add new page confirmedpeople

--- a/globol.css
+++ b/globol.css
@@ -33,8 +33,8 @@ img {
   --title-font-size: 1.875rem;
   --subtitle-font-size: 1rem;
 
-  --title-font: 'Poppins', sans-serif;
-  --body-font: 'DM sans,', sans-serif;
+  --title-font: "Poppins", sans-serif;
+  --body-font: "DM sans,", sans-serif;
 }
 
 /*=========BASE=============== */
