--- a/styleConfirmed.css
+++ b/styleConfirmed.css
@@ -1,5 +1,5 @@
 body > h1 {
-  background-color: aquamarine;
+  background-color: rbg(128,0,128);
   display: flex;
   flex-direction: column;
   align-items: center;
